# LCA_GNNs

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
configs/: default_config.yaml  example_training_config.yaml
data/raw/: country_mapping.json  energy_mapping.json  impact_stats.json  test_molecules.xlsx
docker/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  docker-helper.bat  docker-helper.sh
examples/: config_usage_examples.py  example_workflow.py  examples_final_model_training.py  examples_prepare_data.py  examples_single_molecule_inference.py  examples_train_model.py
src/: scripts.py
src/config/: training_config.py
src/data_processing/: make_dataset.py
src/engines/: evaluation_engines.py  predict_engines.py  training_engines.py
src/models/: models.py
src/trainer/: trainer.py
src/utils/: k_folder.py
tests/: conftest.py  test_imports.py  test_inference.py
trained_models/: GNN_M_GNN_M_best.pth  QSPR_qspr_best.pth
trained_models/GNN_C_single/: GNN_C_ADP_e_final_lr_5.00e-04.pth  GNN_C_ADP_f_final_lr_1.00e-04.pth  GNN_C_Acid_final_lr_1.00e-03.pth  GNN_C_CTUe_final_lr_5.00e-04.pth  GNN_C_CTUh_final_lr_1.00e-03.pth  GNN_C_Eutro_f_final_lr_1.00e-03.pth  GNN_C_Eutro_m_final_lr_5.00e-04.pth  GNN_C_Eutro_t_final_lr_5.00e-04.pth  GNN_C_Gwi_final_lr_5.00e-05.pth  GNN_C_Ionising_final_lr_1.00e-04.pth  GNN_C_ODP_final_lr_5.00e-04.pth  GNN_C_Photo_final_lr_5.00e-05.pth  GNN_C_Soil_final_lr_1.00e-04.pth  GNN_C_Water_use_final_lr_5.00e-04.pth  (+1 more)
(+15 files in other folders)
